# forge-eng-fabric

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  go.work  go.work.sum  initial-spec.md  pnpm-lock.yaml  pyproject.toml
services/alfred/: forge-service.yaml  pyproject.toml
services/alfred/alfred/: __init__.py  a2a.py  app.py  auth.py  autonomy_presets.py  config.py  dedup_indexer.py  dialogue.py  gateways.py  guardrails.py  llm.py  logging.py  loop.py  models.py  observability.py  redaction.py  store.py  telemetry.py  tools.py
services/alfred/alfred/agent_mode/: __init__.py  budget.py  events.py  executor.py  models.py  planner.py  router.py  store.py  workflow_client.py
services/alfred/alfred_stub/: __init__.py  llm.py  main.py
services/alfred/tests/: conftest.py  test_agent_mode_e2e.py  test_agent_mode_executor.py  test_agent_mode_followup.py  test_agent_mode_planner.py  test_agent_mode_sse.py  test_agent_mode_start_step.py  test_app.py  test_guardrails.py  test_llm_headers.py  test_loop.py  test_observability.py  test_phase1_e2e.py  test_rag_app_scope.py  test_tools_prompt_template.py
services/alfred/tests/load/: README.md  dedup_load_test.py
services/approvals/: forge-service.yaml  pyproject.toml
services/approvals/approvals/: __init__.py  app.py  events.py  models.py  store.py
services/approvals/tests/: test_app.py
services/diagnosis/: forge-service.yaml  pyproject.toml
services/diagnosis/diagnosis/: __init__.py  app.py  events.py  models.py  pipeline.py  prompts.py  sources.py
services/diagnosis/tests/: test_pipeline.py
services/eval-harness-adv/: forge-service.yaml  pyproject.toml
services/eval-harness-adv/eval_harness_adv/: __init__.py  app.py  events.py  models.py  service.py  store.py
services/eval-harness-adv/tests/: test_harness.py
services/finops/: forge-service.yaml  pyproject.toml
services/finops/finops_service/: __init__.py  app.py  models.py  pipeline.py  store.py
services/finops/tests/: test_finops.py
services/incidents-kb/: forge-service.yaml  pyproject.toml
services/incidents-kb/incidents_kb/: __init__.py  app.py  embedding.py  events.py  models.py  service.py
services/incidents-kb/tests/: test_service.py
services/mcp/: forge-service.yaml  pyproject.toml  registry-assets.yaml
services/mcp/forge_mcp/: __init__.py  sdk.py
services/mcp/servers/: __init__.py  confluence.py  github.py  github_guardrails.py  github_tokens.py  jira.py  openspec.py
services/mcp/tests/: test_confluence.py  test_confluence_sandbox.py  test_github_write.py  test_jira.py  test_jira_sandbox.py  test_sdk.py
services/rag-ingest/: forge-service.yaml  pyproject.toml
services/rag-ingest/rag_ingest/: __init__.py  app.py  connectors.py  embeddings.py  milvus.py  models.py  pipeline.py  signing.py
services/rag-ingest/tests/: test_pipeline.py
services/sdlc-architecture-skills/: README.md  forge-service.yaml  pyproject.toml
services/sdlc-architecture-skills/eval/check-openspec-alignment/: dataset.yaml  fixtures.json
services/sdlc-architecture-skills/eval/evaluate-options/: dataset.yaml  fixtures.json
services/sdlc-architecture-skills/eval/generate-api-contract/: dataset.yaml  fixtures.json
services/sdlc-architecture-skills/eval/lightweight-threat-model/: dataset.yaml  fixtures.json
services/sdlc-architecture-skills/eval/propose-adr/: dataset.yaml  fixtures.json
services/sdlc-architecture-skills/eval/propose-data-model/: dataset.yaml  fixtures.json
services/sdlc-architecture-skills/sdlc_architecture_skills/: app.py  events.py  models.py  skills.py
services/sdlc-architecture-skills/tests/: test_skills.py
services/sdlc-design-skills/: README.md  forge-service.yaml  pyproject.toml
services/sdlc-design-skills/eval/accessibility-audit/: dataset.yaml  fixtures.json
services/sdlc-design-skills/eval/generate-component-stubs/: dataset.yaml  fixtures.json
services/sdlc-design-skills/eval/generate-ui-blueprint/: dataset.yaml  fixtures.json
services/sdlc-design-skills/sdlc_design_skills/: app.py  events.py  models.py  skills.py
services/sdlc-design-skills/tests/: test_skills.py
skills/reference/: pyproject.toml  registry-assets.yaml
skills/reference/agent-skills/apply-code-review-feedback/: SKILL.md
skills/reference/agent-skills/check-openspec-alignment/: SKILL.md
skills/reference/agent-skills/create-user-stories/: SKILL.md
skills/reference/agent-skills/define-slos-from-spec/: SKILL.md
skills/reference/agent-skills/estimate-cost-from-spec/: SKILL.md
skills/reference/agent-skills/evaluate-options/: SKILL.md
skills/reference/agent-skills/generate-acceptance-criteria/: SKILL.md
skills/reference/agent-skills/generate-api-contract/: SKILL.md
skills/reference/agent-skills/generate-e2e-tests/: SKILL.md
skills/reference/agent-skills/generate-runbook/: SKILL.md
skills/reference/agent-skills/generate-test-cases/: SKILL.md
skills/reference/agent-skills/generate-test-plan/: SKILL.md
skills/reference/agent-skills/implement-feature-tests-first/: SKILL.md
skills/reference/agent-skills/lightweight-threat-model/: SKILL.md
skills/reference/agent-skills/monitor-budget/: SKILL.md
skills/reference/agent-skills/prepare-release-notes/: SKILL.md
skills/reference/agent-skills/prioritize-backlog/: SKILL.md
skills/reference/agent-skills/propose-adr/: SKILL.md
skills/reference/agent-skills/propose-cost-reduction/: SKILL.md
skills/reference/agent-skills/propose-data-model/: SKILL.md
skills/reference/agent-skills/propose-fix-for-finding/: SKILL.md
skills/reference/agent-skills/refactor-with-safety-net/: SKILL.md
skills/reference/agent-skills/refine-user-story/: SKILL.md
skills/reference/agent-skills/scaffold-service/: SKILL.md
skills/reference/agent-skills/triage-test-failures/: SKILL.md
skills/reference/agent-skills/triage-vuln/: SKILL.md
skills/reference/agent-skills/tune-alerts/: SKILL.md
skills/reference/reference_skills/: __init__.py  evals.py  runner.py  schemas.py  skills.py
skills/reference/tests/: test_agent_skill_packages.py  test_skills.py
(+1844 files in other folders)
