[project]
name = "forge-eng-fabric"
version = "0.0.1"
description = "Forge Engineering Fabric — Python services workspace"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["services/alfred"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
