[project]
name = "forge-finops"
version = "0.1.0"
description = "Forge FinOps initiative cost attribution and budget alerts"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "pydantic>=2.9"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finops_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
