[project]
name = "reference-skills"
version = "0.1.0"
description = "Forge Phase 1 reference skills"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "jsonschema>=4.23", "pydantic>=2.9", "uvicorn[standard]>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reference_skills"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
